result/0613-143658/stderr.log
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/features.c: In function ‘dimension’:
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/features.c:21:35: warning: passing argument 2 of ‘read_image_data’ makes pointer from integer without a cast [-Wint-conversion]
   21 |     m=read_image_data(source_path,*data,width,height,channel_count);
      |                                   ^~~~~
      |                                   |
      |                                   unsigned char
In file included from /home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/features.c:1:
/home/runner/work/pgi-2025-the_dynamic_stardust/lib/estia_image/include/estia-image.h:13:59: note: expected ‘unsigned char **’ but argument is of type ‘unsigned char’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                           ~~~~~~~~~~~~~~~~^~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/features.c:21:41: warning: passing argument 3 of ‘read_image_data’ makes pointer from integer without a cast [-Wint-conversion]
   21 |     m=read_image_data(source_path,*data,width,height,channel_count);
      |                                         ^~~~~
      |                                         |
      |                                         int
/home/runner/work/pgi-2025-the_dynamic_stardust/lib/estia_image/include/estia-image.h:13:70: note: expected ‘int *’ but argument is of type ‘int’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                                                 ~~~~~^~~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/features.c:21:47: warning: passing argument 4 of ‘read_image_data’ makes pointer from integer without a cast [-Wint-conversion]
   21 |     m=read_image_data(source_path,*data,width,height,channel_count);
      |                                               ^~~~~~
      |                                               |
      |                                               int
/home/runner/work/pgi-2025-the_dynamic_stardust/lib/estia_image/include/estia-image.h:13:82: note: expected ‘int *’ but argument is of type ‘int’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                                                             ~~~~~^~~~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/features.c:21:54: warning: passing argument 5 of ‘read_image_data’ makes pointer from integer without a cast [-Wint-conversion]
   21 |     m=read_image_data(source_path,*data,width,height,channel_count);
      |                                                      ^~~~~~~~~~~~~
      |                                                      |
      |                                                      int
/home/runner/work/pgi-2025-the_dynamic_stardust/lib/estia_image/include/estia-image.h:13:95: note: expected ‘int *’ but argument is of type ‘int’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                                                                          ~~~~~^~~~~~~~~~~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c: In function ‘second_line’:
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:16:36: warning: passing argument 2 of ‘read_image_data’ makes pointer from integer without a cast [-Wint-conversion]
   16 |     m= read_image_data(source_path,*data, width, height, channel_count) ;
      |                                    ^~~~~
      |                                    |
      |                                    unsigned char
In file included from /home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:1:
/home/runner/work/pgi-2025-the_dynamic_stardust/lib/estia_image/include/estia-image.h:13:59: note: expected ‘unsigned char **’ but argument is of type ‘unsigned char’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                           ~~~~~~~~~~~~~~~~^~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:16:43: warning: passing argument 3 of ‘read_image_data’ makes pointer from integer without a cast [-Wint-conversion]
   16 |     m= read_image_data(source_path,*data, width, height, channel_count) ;
      |                                           ^~~~~
      |                                           |
      |                                           int
/home/runner/work/pgi-2025-the_dynamic_stardust/lib/estia_image/include/estia-image.h:13:70: note: expected ‘int *’ but argument is of type ‘int’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                                                 ~~~~~^~~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:16:50: warning: passing argument 4 of ‘read_image_data’ makes pointer from integer without a cast [-Wint-conversion]
   16 |     m= read_image_data(source_path,*data, width, height, channel_count) ;
      |                                                  ^~~~~~
      |                                                  |
      |                                                  int
/home/runner/work/pgi-2025-the_dynamic_stardust/lib/estia_image/include/estia-image.h:13:82: note: expected ‘int *’ but argument is of type ‘int’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                                                             ~~~~~^~~~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:16:58: warning: passing argument 5 of ‘read_image_data’ makes pointer from integer without a cast [-Wint-conversion]
   16 |     m= read_image_data(source_path,*data, width, height, channel_count) ;
      |                                                          ^~~~~~~~~~~~~
      |                                                          |
      |                                                          int
/home/runner/work/pgi-2025-the_dynamic_stardust/lib/estia_image/include/estia-image.h:13:95: note: expected ‘int *’ but argument is of type ‘int’
   13 | int read_image_data(const char *filename, unsigned char **data, int *width, int *height, int *channel_count);
      |                                                                                          ~~~~~^~~~~~~~~~~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:18:17: warning: passing argument 1 of ‘fprintf’ from incompatible pointer type [-Wincompatible-pointer-types]
   18 |         fprintf("Erreur lecture de l'image");
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                 |
      |                 char *
In file included from /usr/include/stdio.h:980,
                 from /home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:4:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:27: note: expected ‘FILE * restrict’ but argument is of type ‘char *’
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      |          ~~~~~~~~~~~~~~~~~^~~~~~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:18:9: error: too few arguments to function ‘fprintf’
   18 |         fprintf("Erreur lecture de l'image");
      |         ^~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:21:54: error: ‘x’ undeclared (first use in this function)
   21 |         printf("print_pixel (%d, %d): %d, %d, %d\n", x, y, pix->R, pix->G, pix->B);
      |                                                      ^
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:21:54: note: each undeclared identifier is reported only once for each function it appears in
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:21:57: error: ‘y’ undeclared (first use in this function)
   21 |         printf("print_pixel (%d, %d): %d, %d, %d\n", x, y, pix->R, pix->G, pix->B);
      |                                                         ^
/home/runner/work/pgi-2025-the_dynamic_stardust/pgi-2025-the_dynamic_stardust/src/utils.c:21:60: error: ‘pix’ undeclared (first use in this function)
   21 |         printf("print_pixel (%d, %d): %d, %d, %d\n", x, y, pix->R, pix->G, pix->B);
      |                                                            ^~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:121: CMakeFiles/freud.dir/src/utils.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2